--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     margin: 0;
 }
 
+
 body {
     background-color: #909095;
 }
@@ -16,6 +17,20 @@ main{
     justify-content:  center;
     align-items: center;
     height: 100vh;
+    flex-direction: column;
+}
+#bulb{
+    margin-left: 2.1875rem;
+}
+.btn-on-off{
+    padding: .625rem;
+    border: .125rem solid #000;
+    cursor: pointer;
+    font-size: 1.25rem;
+}
+
+.btn-on-off:hover{
+    background-color: beige;
 }
 
 
